--- a/css/root3.css
+++ b/css/root3.css
@@ -1,16 +1,16 @@
 :root, :root.dark {
-    --primary-light-00: #d571eb;
-    --primary-light-10: #e8b2f5;
-    --primary-light-20: #f1d4fa;
-    --primary-dark-00: #c755e0;
-    --primary-dark-10: #ad35c4;
-    --primary-dark-20: #9129a2;
-    --secondary-light-00: #b099ec;
-    --secondary-light-10: #cbbef4;
-    --secondary-light-20: #e1dbf9;
-    --secondary-dark-00: #8b61df;
-    --secondary-dark-10: #8651d6;
-    --secondary-dark-20: #763fc2;
+    --primary-light-00: #ed8c1c;
+    --primary-light-10: #f1a946;
+    --primary-light-20: #f6ca7b;
+    --primary-dark-00: #df7517;
+    --primary-dark-10: #b95a15;
+    --primary-dark-20: #934619;
+    --secondary-light-00: #e54e4e;
+    --secondary-light-10: #f07979;
+    --secondary-light-20: #f7aaaa;
+    --secondary-dark-00: #d23333;
+    --secondary-dark-10: #b02525;
+    --secondary-dark-20: #922222;
     --neutral-light-00: #9094A0;
     --neutral-light-10: #D9DADE;
     --neutral-light-20: #F7F8F8;
@@ -19,25 +19,23 @@
     --neutral-dark-20: #292A2F;
     --bg-color: #212026;
     --text-color: #ffffff;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #8b61df 0%, #d571eb 60%, #FFCC70 100%);
-    --gradient-color: #d571eb;
-    --highlight-color: #FFCC70;
+    --gradient: linear-gradient(300deg, #e54e4e 0%, #ed8c1c 60%, #ffde7d 100%);
+    --gradient-color: #ed8c1c;
+    --highlight-color: #ffde7d;
     }
 :root.light {
-    --primary-light-00: #c755e0;
-    --primary-light-10: #ad35c4;
-    --primary-light-20: #9129a2;
-    --primary-dark-00: #d571eb;
-    --primary-dark-10: #e8b2f5;
-    --primary-dark-20: #f1d4fa;
-    --secondary-light-00: #8b61df;
-    --secondary-light-10: #8651d6;
-    --secondary-light-20: #763fc2;
-    --secondary-dark-00: #b099ec;
-    --secondary-dark-10: #cbbef4;
-    --secondary-dark-20: #e1dbf9;
+    --primary-light-00: #df7517;
+    --primary-light-10: #b95a15;
+    --primary-light-20: #934619;
+    --primary-dark-00: #ed8c1c;
+    --primary-dark-10: #f1a946;
+    --primary-dark-20: #f6ca7b;
+    --secondary-light-00: #d23333;
+    --secondary-light-10: #b02525;
+    --secondary-light-20: #922222;
+    --secondary-dark-00: #e54e4e;
+    --secondary-dark-10: #f07979;
+    --secondary-dark-20: #f7aaaa;
     --neutral-light-00: #5C606D;
     --neutral-light-10: #41444B;
     --neutral-light-20: #292A2F;
@@ -46,9 +44,7 @@
     --neutral-dark-20: #F7F8F8;
     --bg-color: #ffffff;
     --text-color: #212026;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #763fc2 0%, #c755e0 60%, #FFCC70 100%);
-    --gradient-color: #c755e0;
-    --highlight-color: #FFCC70;
+    --gradient: linear-gradient(300deg, #d23333 0%, #df7517 60%, #ffde7d 100%);
+    --gradient-color: #df7517;
+    --highlight-color: #ffde7d;
     }
