--- a/css/root.css
+++ b/css/root.css
@@ -5,12 +5,12 @@
     --primary-dark-00: #0F927C;
     --primary-dark-10: #117465;
     --primary-dark-20: #125D52;
-    --secondary-light-00: #3191C6;
-    --secondary-light-10: #5EAFDB;
-    --secondary-light-20: #91C8E8;
-    --secondary-dark-00: #2174A8;
-    --secondary-dark-10: #1C5D88;
-    --secondary-dark-20: #1B4F71;
+    --secondary-light-00: #57abd9;
+    --secondary-light-10: #91c8e8;
+    --secondary-light-20: #c5e1f2;
+    --secondary-dark-00: #3191c6;
+    --secondary-dark-10: #2174A8;
+    --secondary-dark-20: #1C5D88;
     --neutral-light-00: #9094A0;
     --neutral-light-10: #D9DADE;
     --neutral-light-20: #F7F8F8;
@@ -33,12 +33,12 @@
     --primary-dark-00: #17B598;
     --primary-dark-10: #30D1B1;
     --primary-dark-20: #71EACE;
-    --secondary-light-00: #2174A8;
-    --secondary-light-10: #1C5D88;
-    --secondary-light-20: #1B4F71;
-    --secondary-dark-00: #3191C6;
-    --secondary-dark-10: #5EAFDB;
-    --secondary-dark-20: #91C8E8;
+    --secondary-light-00: #3191c6;
+    --secondary-light-10: #2174A8;
+    --secondary-light-20: #1C5D88;
+    --secondary-dark-00: #57abd9;
+    --secondary-dark-10: #91c8e8;
+    --secondary-dark-20: #c5e1f2;
     --neutral-light-00: #5C606D;
     --neutral-light-10: #41444B;
     --neutral-light-20: #292A2F;
