--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,9 @@ h4 {
   font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
 }
 h5 {
+  font-weight: normal;
   font-size: var(--size-h5);
-  font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
 }
 p {
   font-size: var(--size-p);
@@ -373,15 +374,6 @@ section {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
-
-  view-timeline-name: --titular;
-  view-timeline-axis: block;
-
-  animation-timeline: --titular;
-  animation-name: fade;
-
-  animation-range: entry 0% cover 50%;
-  animation-fill-mode: both;
 }
 .filete {
     margin: 0 auto;
@@ -391,12 +383,6 @@ section {
     height: 4px;
     margin-bottom: 50px;
   }
-.cuadro {
-  background-color: var(--neutral-dark-10);
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-}
 .carrusel {
   width: 100%;
   height: 300px;
@@ -475,11 +461,10 @@ section {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: center;
   gap: 40px;
 }
 #sobremi .doscolumnas {
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 33% 1fr;
   width: 90%;
 }
 @media screen and (max-width: 768px) {
@@ -493,16 +478,46 @@ section {
     width: 80%;
   }
 }
+.cuadrado {
+  aspect-ratio: 1 / 1;
+  max-width: 500px;
+}
 .flexcentrado {
+  margin: 0 auto;
+  position: relative;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.foto1plano {
+  z-index: 3;
+}
 .imgAlberto {
+  border-radius: 20px 0 20px 0;
+  width: 90%;
+}
+.enmarcarFoto {
+  aspect-ratio: 1 / 1;
+  position: absolute;
+  z-index: 2;
   width: 100%;
-  margin-bottom: 20px;
-  border-radius: 10px;
+  display: flex;
+  justify-content:space-between;
+  flex-direction: column;
+}
+.enmarcarFoto :first-child {
+  margin-left: auto;
+}
+.marcoFoto {
+  aspect-ratio: 1 / 1;
+  width: 40%;
+  background-image: var(--gradient);
+  background-color: var(--gradient-color);
+}
+#sobremi h3 {
+  width: fit-content;
+  margin: 20px 0;
 }
 .contacto {
   width: 90%;
