--- a/css/animaciones.css
+++ b/css/animaciones.css
@@ -24,18 +24,24 @@
   
   @keyframes ampliar-rebote {
     0% {
-      transform: scale(10%);
+      transform: scale(40%);
     }
-    70% {
-      transform: scale(150%);
+    80% {
+      transform: scale(110%);
     }
     100% {
       transform: scale(100%);
     }
   }
-  
   .animate-movimiento-rebote {
-    animation: ampliar-rebote 0.6s ease-in-out;
+    view-timeline-name: --rebote;
+    view-timeline-axis: block;
+  
+    animation-timeline: --rebote;
+    animation-name: ampliar-rebote;
+  
+    animation-range: entry 0% cover 50%;
+    animation-fill-mode: none;
   }
   
   @keyframes rotar {
@@ -69,12 +75,29 @@
   }
   
   @keyframes aparicion {
-    from {
+    0% {
+      opacity: 0;
+      scale: 20%;
+    }
+    80% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
+      scale: 100%;
+    }
+  }
+  @keyframes aparicionMarco {
+    0% {
+      opacity: 0;
+      scale: 20%;
+    }
+    30% {
       opacity: 0;
       scale: 20%;
     }
   
-    to {
+    100% {
       opacity: 1;
       scale: 100%;
     }
@@ -87,7 +110,17 @@
     animation-timeline: --image;
     animation-name: aparicion;
   
-    animation-range: entry 25% cover 50%;
+    animation-range: entry 25% cover 40%;
+    animation-fill-mode: both;
+  }
+  .animacion-marcos {
+    view-timeline-name: --marcos;
+    view-timeline-axis: block;
+  
+    animation-timeline: --marcos;
+    animation-name: aparicionMarco;
+  
+    animation-range: entry 30% cover 50%;
     animation-fill-mode: both;
   }
 
@@ -117,6 +150,17 @@
     animation-name: aparicionfilete;
   
     animation-range: entry 50% cover 50%;
+    animation-fill-mode: both;
+  }
+
+  .animacionFade {
+    view-timeline-name: --titular;
+    view-timeline-axis: block;
+  
+    animation-timeline: --titular;
+    animation-name: fade;
+  
+    animation-range: entry 0% cover 50%;
     animation-fill-mode: both;
   }
   
