--- a/css/root3.css
+++ b/css/root3.css
@@ -5,12 +5,12 @@
     --primary-dark-00: #df7517;
     --primary-dark-10: #b95a15;
     --primary-dark-20: #934619;
-    --secondary-light-00: #e54e4e;
-    --secondary-light-10: #f07979;
-    --secondary-light-20: #f7aaaa;
-    --secondary-dark-00: #d23333;
-    --secondary-dark-10: #b02525;
-    --secondary-dark-20: #922222;
+    --secondary-light-00: #f09179;
+    --secondary-light-10: #f7baaa;
+    --secondary-light-20: #fbd6cd;
+    --secondary-dark-00: #e56c4e;
+    --secondary-dark-10: #d15131;
+    --secondary-dark-20: #b04125;
     --neutral-light-00: #9094A0;
     --neutral-light-10: #D9DADE;
     --neutral-light-20: #F7F8F8;
@@ -19,7 +19,7 @@
     --neutral-dark-20: #292A2F;
     --bg-color: #212026;
     --text-color: #ffffff;
-    --gradient: linear-gradient(300deg, #e54e4e 0%, #ed8c1c 60%, #ffde7d 100%);
+    --gradient: linear-gradient(300deg, #f09179 0%, #ed8c1c 60%, #ffde7d 100%);
     --gradient-color: #ed8c1c;
     --highlight-color: #ffde7d;
     }
@@ -30,12 +30,12 @@
     --primary-dark-00: #ed8c1c;
     --primary-dark-10: #f1a946;
     --primary-dark-20: #f6ca7b;
-    --secondary-light-00: #d23333;
-    --secondary-light-10: #b02525;
-    --secondary-light-20: #922222;
-    --secondary-dark-00: #e54e4e;
-    --secondary-dark-10: #f07979;
-    --secondary-dark-20: #f7aaaa;
+    --secondary-light-00: #e56c4e;
+    --secondary-light-10: #d15131;
+    --secondary-light-20: #b04125;
+    --secondary-dark-00: #f09179;
+    --secondary-dark-10: #f7baaa;
+    --secondary-dark-20: #fbd6cd;
     --neutral-light-00: #5C606D;
     --neutral-light-10: #41444B;
     --neutral-light-20: #292A2F;
@@ -44,7 +44,7 @@
     --neutral-dark-20: #F7F8F8;
     --bg-color: #ffffff;
     --text-color: #212026;
-    --gradient: linear-gradient(300deg, #d23333 0%, #df7517 60%, #ffde7d 100%);
+    --gradient: linear-gradient(300deg, #e56c4e 0%, #df7517 60%, #ffde7d 100%);
     --gradient-color: #df7517;
     --highlight-color: #ffde7d;
     }
