--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,7 @@ section {
     flex-wrap: wrap;
   }
   .boton {
+    transition: 1s;
     width: fit-content;
     height: 36px;
     display: flex;
@@ -443,6 +444,7 @@ section {
     color: var(--text-color);
   }
   .iconosportfolio {
+    transition: 1s;
     height: 24px;
     width: 24px;
     background-color: var(--text-color);
@@ -519,38 +521,63 @@ section {
   width: fit-content;
   margin: 20px 0;
 }
+#contacto {
+  padding-top: 40px;
+}
 .contacto {
   width: 90%;
   margin: 0 auto;
 }
 .lista {
-  margin: 0 40px;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 400px;
 }
-.listado {
+.listado {    
+
   padding: 16px;
   border-bottom: 2px solid var(--neutral-dark-10);
 }
+
 .listado a {
   display: flex;
   align-items: center;
+  justify-content: start;
   gap: 10px;
 }
+
+.listado .iconoscontacto:last-child {
+  margin-left: auto;
+  display: none;
+}
+.listado a:hover .iconoscontacto:last-child {
+  display: block;
+}
 .iconoscontacto {
+  transition: 1s;
   height: 24px;
   width: 24px;
   background-color: var(--text-color);
 }
-.listado:hover .iconoscontacto {
+.listado a:hover .iconoscontacto {
   background-image: var(--gradient);
 }
-.listado:hover a {
+.listado a:hover {
   color: var(--primary-light-10);
 }
+@media screen and (max-width: 300px) {
+  .listado .iconoscontacto {
+    display: none;
+  }
+}
 .marco {
-  border: 5px solid var(--primary-dark-00);
+  border: 2px solid var(--neutral-dark-10);
   height: 100%;
-  padding: 50px;
-  text-align: center;
+  padding: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 footer {
   padding: 20px;
