--- a/css/style.css
+++ b/css/style.css
@@ -221,21 +221,30 @@ nav {
   padding-top: 78px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 10px;
 }
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
     .textHero{
     z-index: 5;
     }
   }
 #hero h1 {
   color: var(--primary-dark-20);
-  font-size: 16vw;
   line-height: 100%;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
-/* #slider h1:hover {
-  cursor: pointer;
-} */
+.front {
+  font-size: 18vw;
+}
+.end {
+  font-size: 10vw;
+}
+.developer {
+  line-height: 90%;
+  font-size: 15vw;
+}
 .soloMovil {
   display: none;
 }
@@ -248,26 +257,51 @@ nav {
     display: block;
   }
   #hero h1 {
-    font-size: 17vw;
+    line-height: 110%;
+  }
+  .end {
+    line-height: 110%;
+  }
+  .guion {
+    color: #ed8c1c;
+    transform: scaleX(2);
   }
 }
 @media (max-width: 600px) {
   .soloMovil {
     display: block;
   }
-  #slider h1 {
-    font-size: 24vw;
-    transition: none;
+  .textHero {
+    padding-bottom: 70px;
+  }
+  #hero h1 {
+    line-height:normal;
+  }
+  .front {
+    font-size: 26vw;
+    line-height: 40%;
+  }
+  .end {
+    font-size: 15vw;
+  }
+  .developer {
+    font-size: 19vw;
+    line-height: 100%;
   }
 }
-
+.subtitulo {
+  text-align: center;
+}
 .flechaDown {
   -webkit-mask: url(../images/flechaDown.svg) no-repeat 50% 50%;
   mask: url(../images/flechaDown.svg) no-repeat 50% 50%;
   height: 60px;
   width: 80px;
   background-color: var(--primary-dark-20);
-  margin: 0 auto;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
 }
 .flechaDown:hover{
     background-color: var(--text-color);
@@ -434,7 +468,7 @@ section {
   .boton {
     transition: 1s;
     width: fit-content;
-    height: 36px;
+    min-height: 36px;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -458,6 +492,18 @@ section {
   }
   .boton:hover .iconosportfolio {
     background-color: var(--primary-light-00);
+  }
+
+  @media screen and (max-width: 300px) {
+    .boton {
+      border-radius: none;
+      border: none;
+      padding: 0;
+    }
+    .boton :first-child {
+      display: none;
+    }
+    
   }
 .doscolumnas {
   margin: 0 auto;
@@ -565,9 +611,25 @@ section {
 .listado a:hover {
   color: var(--primary-light-10);
 }
+.iconosMovil {
+  width: 100%;
+  display: none;
+
+}
+.iconosMovil div {
+  width: auto;
+}
 @media screen and (max-width: 300px) {
-  .listado .iconoscontacto {
+  .lista {
     display: none;
+  }
+  .iconosMovil{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+margin-bottom: 20px;
+  }
+  section {
+    margin: 20px 0;
   }
 }
 .marco {
@@ -596,8 +658,13 @@ footer {
 }
 .flex {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   gap: 5px;
+}
+.flex p {
+  margin: 0;
 }
 footer p {
   font-size: calc(var(--size-p) * 0.75);
