--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ nav {
   overflow: hidden;
 }
 .textHero {
+  transition: 1s;
   height: 100vh;
   padding: 10px;
   padding-top: 78px;
@@ -260,11 +261,14 @@ nav {
     line-height: 110%;
   }
   .end {
-    line-height: 110%;
+    line-height: 0px;
   }
   .guion {
-    color: #ed8c1c;
-    transform: scaleX(2);
+    /* color: #ed8c1c; */
+  }
+  .guion::before {
+    content: "————————";
+    letter-spacing: -8px;
   }
 }
 @media (max-width: 600px) {
@@ -283,6 +287,11 @@ nav {
   }
   .end {
     font-size: 15vw;
+    line-height: 110%;
+  }
+  .guion::before {
+    content: "—————";
+    letter-spacing: -8px;
   }
   .developer {
     font-size: 19vw;
@@ -291,6 +300,8 @@ nav {
 }
 .subtitulo {
   text-align: center;
+  color: var(--bg-color);
+  padding: 0 10%;
 }
 .flechaDown {
   -webkit-mask: url(../images/flechaDown.svg) no-repeat 50% 50%;
@@ -440,6 +451,7 @@ section {
   .carrusel img:last-child {
     padding-right: 5vw;
   }
+
 #portfolio h3 {
   margin: 0 5%;
   text-align: center;
@@ -528,7 +540,7 @@ section {
 }
 .cuadrado {
   aspect-ratio: 1 / 1;
-  max-width: 500px;
+  max-width: 400px;
 }
 .flexcentrado {
   margin: 0 auto;
@@ -634,12 +646,35 @@ margin-bottom: 20px;
 }
 .marco {
   border: 2px solid var(--neutral-dark-10);
-  height: 100%;
+  max-height: 400px;
   padding: 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .marco {
+    margin-top: 30px;
+  }
+}
+.fraseFinal {
+  font-size: calc(var(--size-h5) * 1.2);
+  text-align: center;
+  font-style: italic;
+  line-height: 140%;
+  color: var(--neutral-light-10);
+}
+.fraseFinal:hover {
+  color: var(--text-color);
+}
+.fraseFinal:hover .clic {
+  animation: cambioColor 1s infinite ease-in-out;
+}
+@media screen and (max-width: 450px) {
+  .fraseFinal br {
+    display: none;
+  }
 }
 footer {
   padding: 20px;
