--- a/css/animaciones.css
+++ b/css/animaciones.css
@@ -1,4 +1,76 @@
-
+.bolaMov1 {
+  pointer-events: none;
+  background-color: var(--highlight-color);
+  opacity: 70%;
+  filter: blur(100px);
+  width: 480px;
+  height: 350px;
+  border-radius: 50%;
+  position: absolute;
+  left: -10px;
+  bottom: 40px;
+  z-index: 4;
+  animation: rotar 8s infinite ease-in-out;
+  transform-origin: 50% -100%;
+}
+.bolaMov2 {
+  pointer-events: none;
+  background-color: var(--highlight-color);
+  opacity: 60%;
+  filter: blur(60px);
+  width: 300px;
+  height: 320px;
+  border-radius: 50%;
+  position: absolute;
+  top: 130px;
+  right: 20%;
+  z-index: 5;
+  display: inline-block;
+  animation: gradient 6s infinite;
+}
+.bolaMov3 {
+  pointer-events: none;
+  background-color: var(--primary-light-00);
+  filter: blur(40px);
+  width: 400px;
+  height: 320px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  z-index: 3;
+  animation: rotar 12s infinite ease-in-out;
+  transform-origin: -50% 100%;
+}
+.bolaMov4 {
+  pointer-events: none;
+  background-color: var(--secondary-light-00);
+  opacity: 90%;
+  filter: blur(100px);
+  width: 360px;
+  height: 600px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -30%;
+  right: -30%;
+  z-index: 1;
+  animation: gradient 7s infinite;
+}
+.bolaMov5 {
+  pointer-events: none;
+  background-color: var(--highlight-color);
+  opacity: 70%;
+  filter: blur(50px);
+  width: 200px;
+  height: 90px;
+  border-radius: 50%;
+  position: absolute;
+  top: 55%;
+  left: 55%;
+  z-index: 6;
+  animation: rotar 5s infinite;
+  transform-origin: -100% -120%;
+}
 @keyframes aparecer {
     30% {
       transform: scale(80%);
