--- a/css/style.css
+++ b/css/style.css
@@ -155,9 +155,6 @@ nav {
   cursor: pointer;
   background-image: var(--gradient);
 }
-.ocultar {
-  display: none;
-}
 .puntos {
   z-index: 21;
   position: absolute;
@@ -206,7 +203,7 @@ nav {
   position: relative;
   background-image: var(--gradient);
   background-color: var(--gradient-color);
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   color: var(--bg-color);
   display: flex;
@@ -313,83 +310,13 @@ nav {
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
+  z-index: 6;
+
 }
 .flechaDown:hover{
     background-color: var(--text-color);
 }
-.bolaMov1 {
-  pointer-events: none;
-  background-color: var(--highlight-color);
-  opacity: 70%;
-  filter: blur(100px);
-  width: 480px;
-  height: 350px;
-  border-radius: 50%;
-  position: absolute;
-  left: -10px;
-  bottom: 40px;
-  z-index: 4;
-  animation: rotar 8s infinite ease-in-out;
-  transform-origin: 50% -100%;
-}
-.bolaMov2 {
-  pointer-events: none;
-  background-color: var(--highlight-color);
-  opacity: 60%;
-  filter: blur(60px);
-  width: 300px;
-  height: 320px;
-  border-radius: 50%;
-  position: absolute;
-  top: 130px;
-  right: 20%;
-  z-index: 5;
-  display: inline-block;
-  animation: gradient 6s infinite;
-}
-.bolaMov3 {
-  pointer-events: none;
-  background-color: var(--primary-light-00);
-  filter: blur(40px);
-  width: 400px;
-  height: 320px;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 10%;
-  z-index: 3;
-  animation: rotar 12s infinite ease-in-out;
-  transform-origin: -50% 100%;
-}
-.bolaMov4 {
-  pointer-events: none;
-  background-color: var(--secondary-light-00);
-  opacity: 90%;
-  filter: blur(100px);
-  width: 360px;
-  height: 600px;
-  border-radius: 50%;
-  position: absolute;
-  bottom: -30%;
-  right: -30%;
-  z-index: 1;
-  animation: gradient 7s infinite;
-}
-.bolaMov5 {
-  pointer-events: none;
-  background-color: var(--highlight-color);
-  opacity: 70%;
-  filter: blur(50px);
-  width: 200px;
-  height: 90px;
-  border-radius: 50%;
-  position: absolute;
-  top: 55%;
-  left: 55%;
-  z-index: 6;
-  animation: rotar 5s infinite;
-  transform-origin: -100% -120%;
-}
+
 #destacados {
   position: relative;
   overflow: hidden;
@@ -427,6 +354,9 @@ section {
     width: 90%;
     height: 4px;
     margin-bottom: 50px;
+  }
+  #portfolio{
+    scroll-margin-top: 50px;
   }
 .carrusel {
   width: 100%;
@@ -523,6 +453,10 @@ section {
   grid-template-columns: 1fr 1fr;
   gap: 40px;
 }
+#sobremi{
+  padding-bottom: 40px;
+  scroll-margin-top: 50px;
+}
 #sobremi .doscolumnas {
   grid-template-columns: 33% 1fr;
   width: 90%;
@@ -580,7 +514,7 @@ section {
   margin: 20px 0;
 }
 #contacto {
-  padding-top: 40px;
+  scroll-margin-top: 50px;
 }
 .contacto {
   width: 90%;
@@ -706,4 +640,7 @@ footer p {
 }
 footer a:hover .iconoscontacto {
   background-image: var(--gradient);
+}
+.ocultar {
+  display: none;
 }
