--- a/css/root3.css
+++ b/css/root3.css
@@ -19,6 +19,8 @@
     --neutral-dark-20: #292A2F;
     --bg-color: #212026;
     --text-color: #ffffff;
+    --black: #212026;
+    --white: #ffffff;
     --gradient: linear-gradient(300deg, #f09179 0%, #ed8c1c 60%, #ffde7d 100%);
     --gradient-color: #ed8c1c;
     --highlight-color: #ffde7d;
@@ -44,6 +46,8 @@
     --neutral-dark-20: #F7F8F8;
     --bg-color: #ffffff;
     --text-color: #212026;
+    --black: #212026;
+    --white: #ffffff;
     --gradient: linear-gradient(300deg, #e56c4e 0%, #ee8529 60%, #ffde7d 100%);
     --gradient-color: #ee8529;
     --highlight-color: #ffde7d;
