--- a/css/iconos.css
+++ b/css/iconos.css
@@ -1,3 +1,11 @@
+#iconoMenu {
+    -webkit-mask: url(../images/iconos/menu.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/menu.svg) no-repeat 50% 50%;
+  }
+#iconoMenuClose {
+    -webkit-mask: url(../images/iconos/menuClose.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/menuClose.svg) no-repeat 50% 50%;
+}
 #iconoColor {
     -webkit-mask: url(../images/iconos/color.svg) no-repeat 0px 50%;
     mask: url(../images/iconos/color.svg) no-repeat 0px 50%;
@@ -28,8 +36,58 @@
     -webkit-mask: url(../images/iconos/adobe.svg) no-repeat 50% 50%;
     mask: url(../images/iconos/adobe.svg) no-repeat 50% 50%;
   }
-
-
+.iconoFigma {
+    -webkit-mask: url(../images/iconos/figma.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/figma.svg) no-repeat 50% 50%;
+}
+.iconoStudioCode {
+    -webkit-mask: url(../images/iconos/studio-code.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/studio-code.svg) no-repeat 50% 50%;
+}
+.iconoHtml {
+    -webkit-mask: url(../images/iconos/html.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/html.svg) no-repeat 50% 50%;
+}
+.iconoCss {
+    -webkit-mask: url(../images/iconos/css.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/css.svg) no-repeat 50% 50%;
+} 
+.iconoJs {
+    -webkit-mask: url(../images/iconos/javascript.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/javascript.svg) no-repeat 50% 50%;
+}
+.iconoTailwind {
+    -webkit-mask: url(../images/iconos/tailwind.svg) no-repeat 50% 50%;
+    mask: url(../images/iconos/tailwind.svg) no-repeat 50% 50%;
+}
+.iconoBootstrap {
+  -webkit-mask: url(../images/iconos/bootstrap.svg) no-repeat 50% 50%;
+  mask: url(../images/iconos/bootstrap.svg) no-repeat 50% 50%;
+}
+.iconoPhp {
+  -webkit-mask: url(../images/iconos/php.svg) no-repeat 50% 50%;
+  mask: url(../images/iconos/php.svg) no-repeat 50% 50%;
+}
+.iconoResponsive {
+  -webkit-mask: url(../images/iconos/responsive.svg) no-repeat 50% 50%;
+  mask: url(../images/iconos/responsive.svg) no-repeat 50% 50%;
+}
+.iconoW3c {
+  -webkit-mask: url(../images/iconos/w3c.svg) no-repeat 50% 50%;
+  mask: url(../images/iconos/w3c.svg) no-repeat 50% 50%;
+}
+.iconoWordPress {
+  -webkit-mask: url(../images/iconos/wordpress.svg) no-repeat 50% 50%;
+  mask: url(../images/iconos/wordpress.svg) no-repeat 50% 50%;
+}
+.iconoJoomla {
+  -webkit-mask: url(../images/iconos/joomla.svg) no-repeat 50% 50%;
+  mask: url(../images/iconos/joomla.svg) no-repeat 50% 50%;
+}
+.iconoMailchimp {
+  -webkit-mask: url(../images/iconos/mailchimp.svg) no-repeat 50% 50%;
+  mask: url(../images/iconos/mailchimp.svg) no-repeat 50% 50%;
+}
 
 .iconoEmail {
     -webkit-mask: url(../images/iconos/Email.svg) no-repeat 50% 50%;
